# blogit

./: Cargo.toml  Makefile.toml
assets/: test.md
src/: extensions.rs  lib.rs
src/extensions/: image.rs  markdown.rs
static/: index.html
