[package]
name = "blogit"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afterglow = { path = "/home/extraymond/git/afterglow/afterglow" }
afterglow-router = { path = "/home/extraymond/git/afterglow/afterglow-router/" }
log = "0.4.8"
femme = "1.3.0"
console_error_panic_hook = { version = "0.1.6", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
futures = "0.3.4"
uuid = { version = "0.8.1", features = ["v4", "wasm-bindgen"] }
comrak = { version = "0.7.0", default-features = false }
web-sys = { version = "0.3.38", features = ["HtmlCollection", "NodeList"]}
cfg-if = "0.1.10"
wasm-bindgen = "0.2.62"



[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]
release = ["console_error_panic_hook", "wee_alloc", "hljs"]
hljs = []

[profile.release]
lto = true

[dev-dependencies]
wasm-bindgen-test = "0.3.11"
